@@ -1,5 +1,14 @@
 2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	Add input conversion for FilterHtml.
+
+	* src/convutil.h, src/convutil.cpp:
+	  - Add ConvGetC() function resembling fgetc().
+	* src/filterhtml.cpp (FilterHtml::GetNextToken):
+	  - Replace fgetc() calls with ConvGetC().
+
+2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	Drop MAXCHAR macro and just use MAXLEN.
 
 	* src/wordseg.cpp:
